# rostesting

hal_ws/src/hal_control/src/: xbox_control.py
rover_ws/devel/: .catkin  .rosinstall  setup.sh
rover_ws/devel/include/rover_msgs/: All.h  Chutes.h  JointAngles.h  NavState.h  SciFeedback.h
rover_ws/devel/share/arm_teleop/cmake/: arm_teleopConfig.cmake
rover_ws/devel/share/drive_teleop/cmake/: drive_teleopConfig.cmake
rover_ws/devel/share/hal_ik/cmake/: hal_ikConfig.cmake
rover_ws/devel/share/nav_estimation/cmake/: nav_estimationConfig.cmake
rover_ws/devel/share/nav_gui_simple/cmake/: nav_gui_simpleConfig.cmake
rover_ws/devel/share/pololu_driver/cmake/: pololu_driverConfig.cmake
rover_ws/devel/share/psoc_arm/cmake/: psoc_armConfig.cmake
rover_ws/devel/share/psoc_driver/cmake/: psoc_driverConfig.cmake
rover_ws/devel/share/psoc_rover/cmake/: psoc_roverConfig.cmake
rover_ws/devel/share/rover_launch/cmake/: rover_launchConfig.cmake
rover_ws/devel/share/rover_msgs/cmake/: rover_msgs-msg-extras.cmake  rover_msgs-msg-paths.cmake  rover_msgsConfig.cmake
rover_ws/devel/share/trac_ik_kinematics_plugin/cmake/: trac_ik_kinematics_pluginConfig.cmake
rover_ws/devel/share/trac_ik_lib/cmake/: trac_ik_libConfig.cmake
rover_ws/devel/share/vision/cmake/: visionConfig.cmake
rover_ws/install/: .rosinstall  _setup_util.py  setup.sh
rover_ws/install/include/rover_msgs/: Arm.h  Drive.h  NavGoal.h  Pololu.h
rover_ws/install/share/arm_teleop/cmake/: arm_teleopConfig.cmake
rover_ws/install/share/drive_teleop/cmake/: drive_teleopConfig.cmake
rover_ws/install/share/hal_ik/cmake/: hal_ikConfig.cmake
rover_ws/install/share/nav_estimation/cmake/: nav_estimationConfig.cmake
rover_ws/install/share/nav_gui_simple/cmake/: nav_gui_simpleConfig.cmake
rover_ws/install/share/pololu_driver/: package.xml
rover_ws/install/share/pololu_driver/cmake/: pololu_driverConfig.cmake
rover_ws/src/arm_teleop/src/: HalKinematics.py  competition_functions.py  lib_robotis.py  xbox_control.py  xbox_ik_control.py
rover_ws/src/drive_teleop/: CMakeLists.txt
rover_ws/src/hal_ik/: CMakeLists.txt  package.xml
rover_ws/src/hal_ik/src/: DH param.ods  HalKinematics.py  RotationalMartix  hal_ik.cpp  hal_visualizer.py  teleop_controller.py  teleop_controller2.py  teleop_controller3.py
rover_ws/src/nav_estimation/: CMakeLists.txt
rover_ws/src/nav_gui_simple/: CMakeLists.txt
rover_ws/src/psoc_arm/: CMakeLists.txt
rover_ws/src/psoc_driver/: CMakeLists.txt
rover_ws/src/psoc_pololu/: CMakeLists.txt
rover_ws/src/psoc_pololu/include/: pololu.h
rover_ws/src/psoc_pololu/src/: fb.py  pololu.cpp  pololu_node.cpp
rover_ws/src/psoc_rover/: CMakeLists.txt  package.xml
rover_ws/src/psoc_rover/include/: psoc.h
rover_ws/src/psoc_rover/src/: #test_psoc.py#  psoc.cpp
rover_ws/src/rover_launch/launch/: controller.launch  estimator_test.launch
rover_ws/src/rover_msgs/: CMakeLists.txt
rover_ws/src/rover_msgs/msg/: All.msg  Pololu.msg
(+9 files in other folders)
