<?xml version="1.0"?>
<package>
  <name>hal_ik</name>
  <version>0.0.0</version>
  <description>The hal_ik package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="phyatt16@gmail.com">PhilHyatt</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trac_ik_lib</build_depend>

  <build_depend>rover_msgs</build_depend>
  
  <run_depend>trac_ik_lib</run_depend>
  
  <run_depend>rover_msgs</run_depend>


</package>
